Fix table headers showing or misaligned when selection is active

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -94,10 +94,21 @@
         }
       }
 
-      &.active-selection th {
-        border: 0;
+      &.active-selection {
+        background: none;
+        z-index: 1;
+        th {
+          border: 0;
+        }
         .fleet-checkbox {
           opacity: 0;
+        }
+        .active-selection__container {
+          background-color: $ui-off-white;
+          width: 100% !important; // Too much specificity currently at page-level styling. Revisit after data table CSS update to remove !important.
+          .active-selection__inner {
+            justify-content: flex-start;
+          }
         }
       }
     }
